MBS-2833: Make sure a scroll bar appears if the page content is too wide
display: inline-block on the body causes it to expand to the width of all its
child elements.

--- a/root/static/styles/layout.css
+++ b/root/static/styles/layout.css
@@ -7,6 +7,7 @@ body {
     font-size: 12px;
     min-width: 780px;
     margin: auto;
+    display: inline-block;
 }
 
 /*input, select {
